k8s/jellyfin/04-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-ingressroute
  namespace: jellyfin
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`jellyfin.localhost`) || Host(`jellyfin.strawslabs.com`) || Host(`disha.strawslabs.com`) || Host(`disha-moomoo.strawslabs.com`)
      kind: Rule
      services:
        - name: jellyfin-service
          port: 8096
